# server/swagger/swagger.json
@@ -776,6 +776,10 @@
                             "type": "string"
                         },
                         "headers": {
+                            "X-Capsa-Log-Mode": {
+                                "type": "string",
+                                "description": "Indicates the log mode, which can change the log content response, possible values: SingleUnfiltered|SingleFiltered"
+                            },
                             "X-Capsa-Server-Version": {
                                 "type": "string",
                                 "description": "Current Capsa Server version"
@@ -788,6 +792,10 @@
                             "$ref": "#/definitions/bodies.ErrorResponse"
                         },
                         "headers": {
+                            "X-Capsa-Log-Mode": {
+                                "type": "string",
+                                "description": "Indicates the log mode, which can change the log content response, possible values: SingleUnfiltered|SingleFiltered"
+                            },
                             "X-Capsa-Server-Version": {
                                 "type": "string",
                                 "description": "Current Capsa Server version"
@@ -800,6 +808,10 @@
                             "$ref": "#/definitions/bodies.ErrorResponse"
                         },
                         "headers": {
+                            "X-Capsa-Log-Mode": {
+                                "type": "string",
+                                "description": "Indicates the log mode, which can change the log content response, possible values: SingleUnfiltered|SingleFiltered"
+                            },
                             "X-Capsa-Server-Version": {
                                 "type": "string",
                                 "description": "Current Capsa Server version"
@@ -815,6 +827,10 @@
                             "X-Capsa-Error": {
                                 "type": "string",
                                 "description": "Server error information"
+                            },
+                            "X-Capsa-Log-Mode": {
+                                "type": "string",
+                                "description": "Indicates the log mode, which can change the log content response, possible values: SingleUnfiltered|SingleFiltered"
                             },
                             "X-Capsa-Server-Version": {
                                 "type": "string",
